# KeelNet

./: .gitignore  README.md  pyproject.toml
analysis/: generate_experiment_docs.py
analysis/notebooks/: final-comparison-colab.ipynb
archive/legacy-notes/: idea.txt  ignored-paths.txt  structure-first-generation.md
docs/: current-experiment-audit.md  current-experiment-status.md  deep-learning-formulation-note.md  experiment-guidelines.md  hallucination-penalty.md  hallucination-project-proposal.md  local-gpu-runtime.md  stage-09-risk-generalization.md
paper/: main.tex  refs.bib  summary-4page.tex
paper/figures/: stage8-2-architecture-tikz.tex
paper/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  problem_setup.tex  results.tex
src/keelnet/: __init__.py  action.py  balance.py  calibration.py  config.py  control.py  data.py  evaluate.py  hf_compat.py  hybrid.py  learn.py  metrics.py  postprocess.py  stage9.py  train.py  verify.py
stages/: README.md  stage-note-template.md  sync_notebook_templates.py
stages/01-grounded-abstention-baseline/: README.md  results-template.md
stages/02-evidence-support-verification/: README.md
stages/03-confidence-calibration/: README.md
stages/04-unsupported-confidence-control/: README.md
stages/05-retrieval-grounded-qa/: README.md
stages/06-adaptive-constraint-balancing/: README.md
tests/: test_action.py  test_balance.py  test_calibration.py  test_control.py  test_data.py  test_hf_compat.py  test_hybrid.py  test_learn.py  test_metrics.py  test_stage9.py
(+30 files in other folders)
